--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Calculator</title>
-        <link rel="stylesheet" href="https://github.com/yudadlh/yuda.github.io/blob/main/stylesheet.css">
+        <link rel="stylesheet" href="stylesheet.css">
         <script type="text/javascript" src="script.js"></script>
     </head>
     <body>
